--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/Hrithik0112/Namate-React#readme",
   "devDependencies": {
+    "@babel/core": "^7.22.8",
+    "@babel/preset-react": "^7.22.5",
     "parcel": "^2.9.3",
     "process": "^0.11.10"
   },
