--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@babel/core": "^7.22.8",
     "@babel/preset-react": "^7.22.5",
     "parcel": "^2.9.3",
-    "process": "^0.11.10"
+    "postcss": "^8.4.25",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.3.2"
   },
   "dependencies": {
     "react": "^18.2.0",
